# form-snap

./: .dockerignore  .gitignore  AGENTS.md  AGENTS.override.md  CHANGELOG.AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  seed.md
.sisyphus/: boulder.json
backend/: .dockerignore  .env.example  .env.local.example  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users_table.py  0002_add_email_verified_to_users.py  0003_create_forms_table.py  0004_create_submissions_table.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/public/: __init__.py  router.py
backend/app/api/v1/: forms.py  me.py  router.py  submissions.py  users.py
backend/app/core/: __init__.py  firebase.py  mock_provider.py  security.py
backend/app/middleware/: body_size_limit.py  cors.py
backend/app/models/: form.py  submission.py  user.py
backend/app/schemas/: form.py  submission.py  user.py
backend/app/services/: form.py  submission.py  user.py
backend/app/services/email/: __init__.py  base.py  noop_provider.py  resend_provider.py  sender.py  templates.py
backend/scripts/: seed_local.py
backend/tests/: conftest.py  test_forms.py  test_health.py  test_local_sqlite_mock.py  test_me.py  test_public_submit.py  test_submissions.py  test_user_service.py  test_users.py
doc/: mcp-setup-guide.md  setup-guide.md
docs/: prompt.md
frontend/: .dockerignore  .env.local.example  Dockerfile  next.config.ts  package.json  playwright.config.ts  vitest.config.ts
(+142 files in other folders)
